--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,11 @@
 <resources>
     <string name="app_name">SATED</string>
+
+    <string name="permission_title">Woah there!</string>
+    <string name="permission_message">We need a special permission to continue. Use ADB to run the following command:</string>
+    <string name="permission_command">adb shell pm grant com.draco.sated android.permission.WRITE_SECURE_SETTINGS</string>
+
+    <string name="copied">Copied to clipboard</string>
+    <string name="please_wait">Waiting for permission</string>
+    <string name="proceed">Proceed</string>
 </resources>
