--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -14,7 +14,7 @@
     <string name="copied">Copied to clipboard</string>
     <string name="please_wait">Waiting for permission</string>
     <string name="proceed">Proceed</string>
-    <string name="check_all_boxes">Check all boxes to continue</string>
+    <string name="check_all_boxes">Check all boxes to proceed</string>
 
     <string name="sample_image">Sample image</string>
 </resources>
