--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -14,6 +14,8 @@
     <string name="settings">Settings</string>
     <string name="about">About</string>
 
+    <string name="width">Width</string>
+    <string name="height">Height</string>
     <string name="copied">Copied to clipboard</string>
     <string name="please_wait">Waiting for permission</string>
     <string name="check_all_boxes">Check all boxes to proceed</string>
@@ -25,6 +27,14 @@
     <string name="developer_url">https://www.github.com/tytydraco</string>
     <string name="source_url">https://www.github.com/tytydraco/SATED</string>
     <string name="contact_url">mailto:tylernij@gmail.com</string>
+
+    <string name="pref_reset_resolution_title">Reset display</string>
+    <string name="pref_reset_resolution_summary">Restore the original display resolution and density</string>
+    <string name="pref_reset_resolution_key">reset_resolution</string>
+
+    <string name="pref_custom_resolution_title">Custom resolution</string>
+    <string name="pref_custom_resolution_summary">Specify a custom display resolution</string>
+    <string name="pref_custom_resolution_key">custom_resolution</string>
 
     <string name="pref_developer_title">Developer</string>
     <string name="pref_developer_summary">Tyler Nijmeh</string>
