--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,10 +5,13 @@
     <string name="permission_message">We need a special permission to continue. Use ADB to run the following command:</string>
     <string name="permission_command">adb shell pm grant com.draco.sated android.permission.WRITE_SECURE_SETTINGS</string>
 
+    <string name="learn_more">Learn more</string>
+    <string name="learn_more_url">https://www.xda-developers.com/install-adb-windows-macos-linux/</string>
+
     <string name="resolution_title">Resolution</string>
     <string name="resolution_message">Scale your display here to give your poor GPU a break.</string>
 
-    <string name="verify_title">Looks good?</string>
+    <string name="verify_title">Done!</string>
     <string name="verify_message">Let\'s see if this resolution is compatible with your display. Tick all of the boxes in the corners of the screen to continue.</string>
 
     <string name="settings">Settings</string>
