--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -16,6 +16,12 @@
     <string name="settings">Settings</string>
     <string name="about">About</string>
 
+    <string name="add">Add</string>
+    <string name="delete">Delete</string>
+    <string name="delete_confirm">Are you sure?</string>
+    <string name="cancel">Cancel</string>
+    <string name="done">Done</string>
+
     <string name="width">Width</string>
     <string name="height">Height</string>
     <string name="back">Go back!</string>
@@ -42,6 +48,10 @@
     <string name="pref_custom_resolution_title">Custom resolution</string>
     <string name="pref_custom_resolution_summary">Specify a custom display resolution</string>
     <string name="pref_custom_resolution_key">custom_resolution</string>
+
+    <string name="pref_saved_title">Saved resolutions</string>
+    <string name="pref_saved_summary">Pick your favorite resolutions</string>
+    <string name="pref_saved_key">saved</string>
 
     <string name="pref_verify_title">Verify resolutions</string>
     <string name="pref_verify_summary">Show a verification screen when switching resolutions</string>
